--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
         "cordova-plugin-splashscreen": "6.0.0",
         "cordova-plugin-whitelist": "1.3.4",
         "monaca-plugin-monaca-core": "3.3.1",
-        "cordova-plugin-dialogs": "2.0.2",
-        "cordova-plugin-geolocation": "4.0.2"
+        "cordova-plugin-camera": "5.0.1",
+        "phonegap-plugin-barcodescanner": "8.1.0"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
             "monaca-plugin-monaca-core": {},
-            "cordova-plugin-dialogs": {},
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-camera": {},
+            "phonegap-plugin-barcodescanner": {}
         }
     },
     "scripts": {
